# c-udev-demo

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  udev_demo.h
src/: main.c  udev_demo.c
