#
#
#
#

SET(PROJECT_NAME "UDevDemo")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(${PROJECT_NAME})

ENABLE_TESTING()

SET(UDDEMO_EXE "udev_demo")
SET(UDDEMO_INCLUDE "${PROJECT_SOURCE_DIR}/include")
SET(UDDEMO_SRC "${PROJECT_SOURCE_DIR}/src")

# Uncomment to make makefiles verbose
# set(CMAKE_VERBOSE_MAKEFILE ON)

# gcc flags
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -Wextra")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -DDEBUG")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DNDEBUG -O3")

# Source Code
ADD_SUBDIRECTORY(${UDDEMO_SRC})
INCLUDE_DIRECTORIES(${UDDEMO_INCLUDE})

# Executable
ADD_EXECUTABLE(${UDDEMO_EXE} ${SOURCE_FILES})
